[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/run_summary_page/run_summary_page.gd" type="Script" id=1]
[ext_resource path="res://src/ui/menu.theme" type="Theme" id=2]
[ext_resource path="res://raw_assets/sfx/ui/switch_004.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/ui/run_summary_page/badge_icon/run_summary_badge_icon.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NewBestEffect/NewBestLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.776471, 0.364706, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewBestEffect:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewBestEffect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "new_best"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("NewBestEffect/NewBestLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.776471, 0.364706, 1 ), Color( 0.266667, 0.576471, 0.219608, 1 ), Color( 0.419608, 0.776471, 0.364706, 1 ), Color( 0.266667, 0.576471, 0.219608, 1 ), Color( 0.419608, 0.776471, 0.364706, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewBestEffect:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 9.0, -9.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewBestEffect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="RunSummaryPage" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 1 )
anims/new_best = SubResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.427451, 0.427451, 0.780392 )

[node name="HeaderFinalTime" type="Label" parent="."]
anchor_right = 1.0
margin_top = 29.0
margin_bottom = 89.0
theme_type_variation = "Header1"
text = "###.##"
align = 1
valign = 1

[node name="NewBestEffect" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.141697
anchor_right = 0.5
anchor_bottom = 0.141697
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewBestLabel" type="Label" parent="NewBestEffect"]
modulate = Color( 0.419608, 0.776471, 0.364706, 1 )
margin_left = -197.5
margin_top = -38.0
margin_right = 197.5
margin_bottom = 38.0
theme_type_variation = "Header2"
text = "! New Best !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.293434
anchor_top = 0.206019
anchor_right = 0.706566
anchor_bottom = 0.793981
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 818.0
margin_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
custom_constants/separation = 60
alignment = 1

[node name="TimeInfo" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 440.0
margin_bottom = 273.0
custom_constants/vseparation = 15
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_right = 314.0
margin_bottom = 33.0
text = "Base Time"
align = 2

[node name="LabelBaseTime" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_left = 334.0
margin_right = 440.0
margin_bottom = 33.0
text = "###.##"
align = 1
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_top = 48.0
margin_right = 314.0
margin_bottom = 81.0
text = "Badge Time"
align = 2

[node name="LabelBadgeTime" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_left = 334.0
margin_top = 48.0
margin_right = 440.0
margin_bottom = 81.0
text = "###.##"
align = 1
valign = 1

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_top = 96.0
margin_right = 314.0
margin_bottom = 129.0
text = "Missed Enemy Penalty"
align = 2

[node name="LabelPenaltyTimeEnemy" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_left = 334.0
margin_top = 96.0
margin_right = 440.0
margin_bottom = 129.0
text = "###.##"
align = 1
valign = 1

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_top = 144.0
margin_right = 314.0
margin_bottom = 177.0
text = "Hit Friendly Penalty"
align = 2

[node name="LabelPenaltyTimeFriendly" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_left = 334.0
margin_top = 144.0
margin_right = 440.0
margin_bottom = 177.0
text = "###.##"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_top = 192.0
margin_right = 314.0
margin_bottom = 225.0
text = "Final Time"
align = 2

[node name="LabelFinalTime" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_left = 334.0
margin_top = 192.0
margin_right = 440.0
margin_bottom = 225.0
text = "###.##"
align = 1
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_top = 240.0
margin_right = 314.0
margin_bottom = 273.0
text = "Par Time"
align = 2

[node name="LabelParTime" type="Label" parent="VBoxContainer/HBoxContainer/TimeInfo"]
margin_left = 334.0
margin_top = 240.0
margin_right = 440.0
margin_bottom = 273.0
text = "###.##"
align = 1
valign = 1

[node name="MiscInfo" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 818.0
margin_bottom = 273.0
custom_constants/vseparation = 15
custom_constants/hseparation = 20
columns = 2

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_right = 189.0
margin_bottom = 33.0
text = "Shots Fired"
align = 2

[node name="LabelShotsFired" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_left = 209.0
margin_right = 318.0
margin_bottom = 33.0
text = "###"
align = 1
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_top = 48.0
margin_right = 189.0
margin_bottom = 81.0
text = "Accuracy"
align = 2
valign = 1

[node name="ValueAccuracy" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_left = 209.0
margin_top = 48.0
margin_right = 318.0
margin_bottom = 81.0
text = "### %"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_top = 96.0
margin_right = 189.0
margin_bottom = 129.0
text = "Enemies Hit"
align = 2
valign = 1

[node name="ValueTargetsHit" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_left = 209.0
margin_top = 96.0
margin_right = 318.0
margin_bottom = 129.0
text = "## / ##"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_top = 144.0
margin_right = 189.0
margin_bottom = 177.0
text = "Friendlies Hit"
align = 2
valign = 1

[node name="ValueFriendliesHit" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_left = 209.0
margin_top = 144.0
margin_right = 318.0
margin_bottom = 177.0
text = "## / ##"
align = 1
valign = 1

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_top = 192.0
margin_right = 189.0
margin_bottom = 225.0
text = "Longest Shot"
align = 2

[node name="LabelLongestShot" type="Label" parent="VBoxContainer/HBoxContainer/MiscInfo"]
margin_left = 209.0
margin_top = 192.0
margin_right = 318.0
margin_bottom = 225.0
text = "##.#"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 293.0
margin_right = 818.0
margin_bottom = 297.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 317.0
margin_right = 818.0
margin_bottom = 426.0
scroll_vertical_enabled = false

[node name="BadgeIcons" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 64.0
margin_bottom = 109.0

[node name="BadgePlaceholder" parent="VBoxContainer/ScrollContainer/BadgeIcons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 109.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 446.0
margin_right = 818.0
margin_bottom = 450.0

[node name="BadgeInfoHover" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 470.0
margin_right = 818.0
margin_bottom = 635.0
custom_constants/separation = 15

[node name="BadgeTitle" type="Label" parent="VBoxContainer/BadgeInfoHover"]
margin_right = 818.0
margin_bottom = 33.0
text = "Placeholder"
align = 1
valign = 1

[node name="BadgeDescription" type="Label" parent="VBoxContainer/BadgeInfoHover"]
margin_top = 48.0
margin_right = 818.0
margin_bottom = 117.0
text = "This is where the description will be for the badge under the mouse."
align = 1
valign = 1
autowrap = true

[node name="BadgeTimeValue" type="Label" parent="VBoxContainer/BadgeInfoHover"]
margin_top = 132.0
margin_right = 818.0
margin_bottom = 165.0
text = "-#.# Seconds"
align = 1
valign = 1

[node name="BtnContinue" type="Button" parent="."]
anchor_left = 0.454545
anchor_top = 0.902778
anchor_right = 0.54596
anchor_bottom = 0.966667
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2
bus = "UISounds"

[connection signal="pressed" from="BtnContinue" to="." method="_on_btn_continue_pressed"]
